[package]

name = "redusa"
version = "0.0.1"
authors = ["Beho Alheit <behoalheit@gmail.com>"]

[[bin]]

name = "redusa"
path = "src/main.rs"


[dependencies]
iron = "0.6.0"
time = "0.1.39"
urlencoded = "0.6.0"
env_logger = "*"
logger = "0.4.0"
router = "0.6.0"
persistent = "*"
bodyparser = "0.8.0" 
serde = "1.0.27"
serde_derive = "1.0.9"
